Update configs or hibernate and maven